--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "eslint \"**/*.js\" --cache && c8 --reporter=lcov mocha",
+    "test": "eslint \"**/*.js\" --cache",
     "preversion": "npm test",
     "postversion": "git push --follow-tags && npm publish"
   },
