--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,9 @@
 		"quotes": [2, "double", "avoid-escape"],
 		"semi": [2, "always"]
 	},
+  "parserOptions": {
+    "ecmaVersion": 2019
+  },
 	"extends": [
 		"eslint:recommended"
 	]
