--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "csv-parse": "^4.10.1",
     "enquirer": "^2.3.5",
+    "fumen-svg": "^0.1.5",
     "neodoc": "^2.0.2",
     "tetris-fumen": "^1.1.1"
   },
